prevent accordion collapsing on button click, render buttons if not deleted

--- a/app/static/css/tmkt.css
+++ b/app/static/css/tmkt.css
@@ -98,6 +98,6 @@
 
 .accordion-button:not(.collapsed) .show-on-collapse,
 .accordion-button.collapsed .no-show-on-collapse {
-	display: none;
+	display: none !important;
 }
 
